# myshell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  info.txt  main  main.cpp  makefile  my_modules.cpp  my_modules.h  myshell
forkexec/: CMakeLists.txt  runner_main  runner_main.cpp  victim_main  victim_main.cpp
modules/: mpwd  mpwd.cpp  myhello  mypwd
src/: main.cpp  mycat.cpp  myls.cpp  mymkdir.cpp  myrm.cpp  wild  wildcard.cpp
